<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.homepurchases.fragments.HomeFragment"
        android:label="@string/tab_home">
        <action
            android:id="@+id/action_home_to_statistics"
            app:destination="@id/statisticsFragment" />
    </fragment>

    <fragment
        android:id="@+id/purchasesFragment"
        android:name="com.example.homepurchases.fragments.PurchasesFragment"
        android:label="@string/tab_purchases">
        <action
            android:id="@+id/action_purchases_to_addEdit"
            app:destination="@id/addEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.homepurchases.fragments.SettingsFragment"
        android:label="@string/tab_settings">
        <action
            android:id="@+id/action_settings_to_categories"
            app:destination="@id/categoryManagementFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditFragment"
        android:name="com.example.homepurchases.fragments.AddEditFragment"
        android:label="@string/add_purchase">
        <argument
            android:name="purchaseId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.homepurchases.fragments.StatisticsFragment"
        android:label="@string/statistics_title" />

    <fragment
        android:id="@+id/categoryManagementFragment"
        android:name="com.example.homepurchases.fragments.CategoryManagementFragment"
        android:label="@string/categories_title" />

</navigation>
